# circt

./: .envrc  .gitignore  CMakeLists.txt  aos-bundle-create.mlir  aos-bundle-through-vector.mlir  aos-connect-to-aos.mlir  aos-connect-to-subindex-of-invalid-vector.mlir  aos-intermediate-vector-fixup.mlir  aos-to-soa.mlir.backup  example.fir  example.mlir  example2.fir
.github/workflows/: buildAndTest.yml  buildAndTestWindows.yml  shortIntegrationTests.yml
docs/HWL/: examples.hwl
include/augur/Format/: AugurFormat.h
include/augur/Parser/: AugurParser.h
include/augur/VM/: Augur.h
include/circt-c/Dialect/: OM.h
include/circt/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/circt/HWL/: HWL.h  HWLAst.h  HWLDatabase.h  HWLDiagnostic.h  HWLIncremental.h  HWLLocation.h  HWLParser.h  HWLTypeCheck.h
include/circt/HWML/: HWML.h  HWMLAst.h  HWMLDatabase.h  HWMLIncremental.h  (+1 more)
integration_test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
integration_test/Dialect/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Augur/: CMakeLists.txt
lib/Bindings/: CMakeLists.txt
lib/Bindings/TCL/: CMakeLists.txt  hello.c
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/HWL/: CMakeLists.txt  HWLAst.cpp  HWLDatabase.cpp  HWLParser.cpp  HWLTypeCheck.cpp
lib/HWL/Incremental/: CMakeLists.txt  Database.cpp
lib/HWL/LSPServer/: CMakeLists.txt  HWLServer.cpp  LSPServer.cpp
lib/HWL/Parse/: CMakeLists.txt  Capture.cpp  Insn.cpp  MemoTable.cpp
lib/HWML/: CMakeLists.txt  HWMLAst.cpp  HWMLDatabase.cpp  HWMLParser.cpp  j
lib/HWML/Incremental/: CMakeLists.txt  Database.cpp
lib/HWML/LSPServer/: CMakeLists.txt  HWMLServer.cpp  LSPServer.cpp
lib/HWML/Parse/: CMakeLists.txt  Capture.cpp  Insn.cpp  MemoTable.cpp
test/: CMakeLists.txt
test/HWML/: test.hwml
test/firtool/: firtool.fir  memoryLowering.fir  memoryMetadata.fir  prefixMemory.fir  print-before.fir
tools/: CMakeLists.txt
tools/augur/: CMakeLists.txt  augur-main.cpp
tools/augur-format/: CMakeLists.txt
tools/firtool/: firtool.cpp
tools/hwl/: CMakeLists.txt  hwl.cpp
tools/hwl-lsp-server/: CMakeLists.txt  hwl-lsp-server.cpp
tools/hwl-vscode/: package-lock.json  package.json
tools/hwml/: CMakeLists.txt  hwml.cpp
tools/hwml-lsp-server/: CMakeLists.txt  hwml-lsp-server.cpp
tools/hwml-vscode/: CHANGELOG.md  README.md  package.json
unittests/: CMakeLists.txt
unittests/HWML/: CMakeLists.txt
utils/: equiv-rtl.sh
(+183 files in other folders)
